# AIP490-be

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  initializer.py  manage.py  pyproject.toml  requirements.txt
application/main/: config.py
common/: Documents - Shortcut.lnk  format_image.py  monitor.py  read_image.py
data/VITON/: test_unpairs.txt
models/: error.py  request.py  respone.py
mongo_db_utils/: mongodb_config.py
routers/: body_recognize.py  face_recognize.py  image_recognize.py  ocr_japanese.py
services/: body_background.py  body_detection.py  body_skeleton.py  glass_virtual_tryon.py
services/anime/: photo2cartoon_services.py
services/anime/photo2cartoon/: UGATIT_sadalin_hourglass.py
services/clothesviton/: datasets.py  reference.py
services/clothesviton/utils/lpips/: dist_model.py
services/deepface/: DeepFace.py
services/deepface/basemodels/: ArcFace.py  Boosting.py  DeepID.py  DlibResNet.py  DlibWrapper.py  Facenet.py  Facenet512.py  FbDeepFace.py  OpenFace.py  VGGFace.py
services/deepface/commons/: distance.py  functions.py  realtime.py
services/deepface/detectors/: DlibWrapper.py  FaceDetector.py  MediapipeWrapper.py  MtcnnWrapper.py  OpenCvWrapper.py  RetinaFaceWrapper.py  SsdWrapper.py
services/deepface/extendedmodels/: Age.py  Emotion.py  Gender.py  Race.py
services/skeleton/: val.py
services/skeleton/models/: with_mobilenet.py
services/skeleton/modules/: pose.py
tests/: test.py
tests/DAFlow/: datasets.py  test_SDAFNet_viton.py  train_SDAFNet_viton.py
tests/DAFlow/data/data_process/: data.txt
tests/DAFlow/utils/lpips/: networks_basic.py
utility/anime_utility/hayao/tools/: adjust_brightness.py  utils.py
utility/anime_utility/photo2cartoon/utils/: face_detect.py  face_seg.py  preprocess.py
utility/face_smooth_utility/detector/: detect.py  smooth.py
utility/face_smooth_utility/utils/: image.py  video.py
utility/monitor/: time.py
utility/validation/: error.py
