[tool.poetry]
authors = ["Anh Truong <sdtla0911114819@gmail.com>"]
description = "Captone project BackEnd"
name = "AIP-BE"
version = "0.1.0"
[tool.poetry.dependencies]
click = "8.1.3"
colorama = "0.4.6"
contourpy = "1.1.0"
cycler = "0.11.0"
distlib = "0.3.6"
fastapi = "0.101.0"
filelock = "3.12.0"
flask = "2.0.1"
flask-cors = "3.0.10"
fonttools = "4.42.0"
importlib-resources = "6.0.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
kiwisolver = "1.4.4"
markupsafe = "2.1.3"
matplotlib = "3.7.2"
numpy = "1.24.4"
packaging = "23.1"
pillow = "10.0.0"
platformdirs = "3.5.1"
pyparsing = "3.0.9"
python = "^3.8"
python-dateutil = "2.8.2"
six = "1.16.0"
uvicorn = "0.23.2"
virtualenv = "20.23.0"
werkzeug = "2.3.6"
zipp = "3.16.2"
requests = "2.31.0"
torch = "2.0.1"
torchvision = "0.15.2"
annotated-types = "0.5.0"
anyio = "3.7.1"
attrs = "23.1.0"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
cleo = "2.0.1"
crashtest = "0.4.1"
dulwich = "0.21.5"
exceptiongroup = "1.1.2"
h11 = "0.14.0"
h5py = "3.9.0"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
jaraco-classes = "3.3.0"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
keyring = "23.13.1"
lockfile = "0.12.2"
more-itertools = "10.1.0"
mpmath = "1.3.0"
msgpack = "1.0.5"
networkx = "3.1"
pandas = "2.0.3"
pexpect = "4.8.0"
pkginfo = "1.9.6"
pkgutil-resolve-name = "1.3.10"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
ptyprocess = "0.7.0"
pydantic = "2.1.1"
pydantic-core = "2.4.0"
pyproject-hooks = "1.0.0"
python-multipart = "0.0.6"
pytz = "2023.3"
pywin32-ctypes = "0.2.2"
rapidfuzz = "2.15.1"
referencing = "0.30.2"
requests-toolbelt = "1.0.0"
rpds-py = "0.9.2"
shellingham = "1.5.0.post1"
sniffio = "1.3.0"
starlette = "0.27.0"
sympy = "1.12"
tomli = "2.0.1"
tomlkit = "0.12.1"
tqdm = "4.66.1"
trove-classifiers = "2023.8.7"
typing-extensions = "4.7.1"
tzdata = "2023.3"
urllib3 = "1.26.16"
webencodings = "0.5.1"
